Apply Prettier formatting, add Javadoc, and introduce custom exception hierarchy
- Apply Prettier (prettier-plugin-java) formatting across all Java sources
- Add comprehensive Javadoc to all classes, methods, and fields
- Introduce custom exception hierarchy (EntityNotFoundException, AccessDeniedException, DuplicateException, BusinessException) replacing generic exceptions
- Update CLAUDE.md and README.md with detailed project documentation
- Add Prettier/SonarQube configuration files (.prettierrc.json, .prettierignore, sonar-project.properties)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>